# stingray

./: .gitignore  CMakeLists.txt  README.md  model.config  package.xml
config/: dual_ekf_navsat_params.yaml  gz_ros_bridge.yaml  joystick.yaml  main.rviz  map.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  view_bot.rviz
description/meshes/: Stingray.stl
description/urdf/: inertial_macros.xacro  robot.urdf.xacro  robot_camera.xacro  robot_core.xacro  robot_depth_camera.xacro  robot_gazebo.xacro  robot_lidar.xacro  robot_material.xacro  robot_property.xacro
launch/: ball_tracker.launch.py  bootup_launch.sh  dragger.launch.py  dual_ekf_navsat.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  mapviz.launch.py  navigation_launch.py  online_async_launch.py  plucky.launch.py  pluckysens.launch.py  rsp.launch.py  sim.launch.py  twist_mux.launch.py
worlds/: baylands.sdf  obstacle.world  obstacle_gz.sdf  obstacle_gz.world  sample_gz.sdf  test_robot_world.sdf
