<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stingray</name>
  <version>0.0.0</version>
  <description>
    Parallax Stingray / 
    https://articulatedrobotics.xyz/category/getting-ready-to-build-a-ros-robot / 
    https://github.com/slgrobotics/articubot_one
  </description>
  <maintainer email="jhphelan@hal-pc.org">James Phelan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
